--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "mongoose": "^8.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-json-view": "^1.21.3",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
